--- a/css/styles.css
+++ b/css/styles.css
@@ -10,4 +10,48 @@
   padding: 0px 20px;
 }
 
+h3 {
+  font-size: 18px;
+}
+
+.body {
+  background-color: #eee;
+  margin-top: -4px;
+  padding: 10px;
+}
+.body h3 {
+  margin-bottom: 8px;
+}
+.body .footer {
+  width: 100%;
+  margin-top: 8px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.body .footer h5 {
+  font-size: 16px;
+  background-color: burlywood;
+  padding: 5px 10px;
+  border-radius: 5px;
+  color: beige;
+  cursor: pointer;
+}
+
+.row {
+  margin: 50px 0;
+  width: 100%;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 35px;
+}
+.row .column {
+  width: 100%;
+}
+.row .column .image {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+
 /*# sourceMappingURL=styles.css.map */
